--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -59,6 +59,7 @@
 .il-product-features-multi-dimension { background-image: url('../images/il-product-features-multi-dimension.png'); }
 .il-product-features-smart-priori { background-image: url('../images/il-product-features-smart-priori.png'); }
 .il-product-features-anti-pattern { background-image: url('../images/il-product-features-anti-pattern.png'); }
+.il-product-features-from-to { background-image: url('../images/il-product-features-from-to.png'); }
 
 .photo-vishal-rai-big { background-image: url('../images/photo-vishal-rai-big.jpg'); }
 .photo-developer-1 { background-image: url('../images/photo-developer-1.png'); }
