add a header image

--- a/embold.com/css/embold.css
+++ b/embold.com/css/embold.css
@@ -90,7 +90,7 @@
   background-image: url('../images/header-index-hero.png');
 }
 .bg-product-overview {
-  background-image: url('../images/header-sub-product-overview.svg');
+  background-image: url('../images/header-sub-product-overview.png');
 }
 .bg-product-features {
   background-image: url('../images/header-sub-product-features.svg');
