--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -33,7 +33,7 @@
 .logo-small-deutsche-leasing { background-image: url('../images/ic-logo-sq-deutsche-leasing.svg'); }
 
 .bg-index-hero { background-image: url('../images/header-index-hero.png'); }
-.bg-product-overview { background-image: url('../images/header-sub-product-overview.svg'); }
+.bg-product-overview { background-image: url('../images/header-sub-product-overview.png'); }
 .bg-product-features { background-image: url('../images/header-sub-product-features.svg'); }
 .bg-product-use-cases { background-image: url('../images/header-sub-product-use-cases.svg'); }
 .bg-product-pricing { background-image: url('../images/header-sub-product-pricing.svg'); }
