--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -347,7 +347,7 @@ button:focus {
 .block-index-hero {
   .wrap-hero-content {
     width: 40em;
-    margin-top: 20em;
+    margin-top: 16em;
     margin-bottom: 3em;
     padding: 2.4em;
     background-color: @white;
@@ -383,7 +383,7 @@ button:focus {
     background-size: 100%;
     background-repeat: no-repeat;
     position: absolute;
-    top: 6em;
+    top: 5em;
     right: 3em;
     z-index: 1;
   }
@@ -776,6 +776,33 @@ button:focus {
     position: absolute;
     top: 0;
     right: 0;
+  }
+}
+
+.header-resource-product {
+  height: 270px;
+  margin-top: 0;
+  margin-bottom: 48px;
+  padding-top: 7em;
+  padding-bottom: 2em;
+  position: relative;
+  background-position: top -1em center;
+
+  h4 {
+    // color: @white;
+    margin: 0 0 0.5em 0;
+    padding: 0;
+  }
+
+  .header-sub-title {
+    // color: @white;
+    font-family: 'Sofia Pro', sans-serif;
+    font-size: 3em;
+    font-weight: 300;
+    margin: 0;
+    text-align: center;
+    letter-spacing: -0.03em;
+    line-height: 1.2;
   }
 }
 
