--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -53,6 +53,10 @@
 .bg-company-careers { background-image: url('../images/header-sub-company-careers.svg'); }
 .bg-company-news { background-image: url('../images/header-sub-company-news.svg'); }
 
+.bg-resources-product { background-image: url('../images/header-sub-resources-product.svg'); }
+
+
+
 .il-index-features { background-image: url('../images/il-index-features.png'); }
 .il-index-locations { background-image: url('../images/il-index-locations.png'); }
 .il-product-overview-ruleless-static { background-image: url('../images/il-product-overview-ruleless-static.png'); }
