--- a/embold.com/css/embold.css
+++ b/embold.com/css/embold.css
@@ -137,6 +137,9 @@
 .bg-company-news {
   background-image: url('../images/header-sub-company-news.svg');
 }
+.bg-resources-product {
+  background-image: url('../images/header-sub-resources-product.svg');
+}
 .il-index-features {
   background-image: url('../images/il-index-features.png');
 }
@@ -473,7 +476,7 @@ button:focus {
 /*-- section - index --*/
 .block-index-hero .wrap-hero-content {
   width: 40em;
-  margin-top: 20em;
+  margin-top: 16em;
   margin-bottom: 3em;
   padding: 2.4em;
   background-color: #fff;
@@ -507,7 +510,7 @@ button:focus {
   background-size: 100%;
   background-repeat: no-repeat;
   position: absolute;
-  top: 6em;
+  top: 5em;
   right: 3em;
   z-index: 1;
 }
@@ -874,6 +877,28 @@ button:focus {
   position: absolute;
   top: 0;
   right: 0;
+}
+.header-resource-product {
+  height: 270px;
+  margin-top: 0;
+  margin-bottom: 48px;
+  padding-top: 7em;
+  padding-bottom: 2em;
+  position: relative;
+  background-position: top -1em center;
+}
+.header-resource-product h4 {
+  margin: 0 0 0.5em 0;
+  padding: 0;
+}
+.header-resource-product .header-sub-title {
+  font-family: 'Sofia Pro', sans-serif;
+  font-size: 3em;
+  font-weight: 300;
+  margin: 0;
+  text-align: center;
+  letter-spacing: -0.03em;
+  line-height: 1.2;
 }
 .block-section-sub .section-title {
   font-size: 2.3em;
