--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -992,7 +992,13 @@ button:focus {
     li {
       color: @gray700;
       font-size: 0.9em;
-      line-height: 1.8;
+      line-height: 2.1;
+      cursor: pointer;
+      .transition;
+    }
+
+    li:hover {
+      color: @orange800;
     }
   }
 }
