Menu structure changed

--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -346,19 +346,19 @@ button:focus {
 
 .block-index-hero {
   .wrap-hero-content {
-    width: 40em;
-    margin-top: 16em;
+    margin-top: 20em;
     margin-bottom: 3em;
     padding: 2.4em;
-    background-color: @white;
+    // background-color: @white;
     z-index: 20;
     position: relative;
-    .box-shadow;
+    // .box-shadow;
 
     h1.headcopy {
       margin: 0;
       padding: 0;
       font-size: 4em;
+      font-weight: 300;
       text-align: left;
       line-height: 1.2;
       .sofia;
@@ -377,7 +377,7 @@ button:focus {
     }
   }
 
-  .header-image {
+    .header-image {
     width: 54rem;
     height: 50rem;
     background-size: 100%;
