--- a/embold.com/css/embold.css
+++ b/embold.com/css/embold.css
@@ -475,21 +475,17 @@ button:focus {
 }
 /*-- section - index --*/
 .block-index-hero .wrap-hero-content {
-  width: 40em;
-  margin-top: 16em;
+  margin-top: 20em;
   margin-bottom: 3em;
   padding: 2.4em;
-  background-color: #fff;
   z-index: 20;
   position: relative;
-  -webkit-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  -moz-box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
-  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.14);
 }
 .block-index-hero .wrap-hero-content h1.headcopy {
   margin: 0;
   padding: 0;
   font-size: 4em;
+  font-weight: 300;
   text-align: left;
   line-height: 1.2;
   font-family: 'Sofia Pro', sans-serif;
