--- a/embold.com/css/color-chart.less
+++ b/embold.com/css/color-chart.less
@@ -11,6 +11,8 @@
 @mint800: #21ABB0;
 
 @orange800: #EF7E53;
+@orange900: #E26640;
+
 @yellow800: #F5B54D;
 @purple800: #CC61A8;
 @green800: #BACC54;
