--- a/embold.com/css/embold.css
+++ b/embold.com/css/embold.css
@@ -476,19 +476,22 @@ button:focus {
 }
 /*-- section - index --*/
 .block-index-hero .wrap-hero-content {
-  margin-top: 20em;
+  margin-top: 20.5em;
   margin-bottom: 3em;
   padding: 2.4em;
   z-index: 20;
   position: relative;
+  overflow: visible;
 }
 .block-index-hero .wrap-hero-content h1.headcopy {
+  width: 12em;
   margin: 0;
   padding: 0;
   font-size: 4em;
   font-weight: 300;
   text-align: left;
   line-height: 1.2;
+  overflow: visible;
   font-family: 'Sofia Pro', sans-serif;
   letter-spacing: -0.005em;
 }
@@ -502,7 +505,7 @@ button:focus {
   width: 20em;
 }
 .block-index-hero .header-image {
-  width: 54rem;
+  width: 53rem;
   height: 50rem;
   background-size: 100%;
   background-repeat: no-repeat;
