--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -347,21 +347,23 @@ button:focus {
 
 .block-index-hero {
   .wrap-hero-content {
-    margin-top: 20em;
+    margin-top: 20.5em;
     margin-bottom: 3em;
     padding: 2.4em;
-    // background-color: @white;
     z-index: 20;
     position: relative;
+    overflow: visible;
     // .box-shadow;
 
     h1.headcopy {
+      width: 12em;
       margin: 0;
       padding: 0;
       font-size: 4em;
       font-weight: 300;
       text-align: left;
       line-height: 1.2;
+      overflow: visible;
       .sofia;
     }
 
@@ -379,7 +381,7 @@ button:focus {
   }
 
     .header-image {
-    width: 54rem;
+    width: 53rem;
     height: 50rem;
     background-size: 100%;
     background-repeat: no-repeat;
