--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -23,6 +23,13 @@
 .ic-office            { background-image: url('../images/ic-md-office.svg'); }
 .ic-flag              { background-image: url('../images/ic-md-flag.svg'); }
 .ic-coffee            { background-image: url('../images/ic-md-coffee.svg'); }
+.ic-documents            { background-image: url('../images/ic-md-documents.svg'); }
+.ic-timeline            { background-image: url('../images/ic-md-timeline.svg'); }
+.ic-office-location            { background-image: url('../images/ic-md-office-location.svg'); }
+.ic-mountain-flag            { background-image: url('../images/ic-md-mountain-flag.svg'); }
+.ic-members            { background-image: url('../images/ic-md-members.svg'); }
+.ic-focus            { background-image: url('../images/ic-md-focus.svg'); }
+.ic-faq            { background-image: url('../images/ic-md-faq.svg'); }
 
 
 .ic-logo-deutsche-leasing { background-image: url('../images/ic-logo-deutsche-leasing.svg'); }
@@ -64,6 +71,7 @@
 .il-product-features-smart-priori { background-image: url('../images/il-product-features-smart-priori.png'); }
 .il-product-features-anti-pattern { background-image: url('../images/il-product-features-anti-pattern.png'); }
 .il-product-features-from-to { background-image: url('../images/il-product-features-from-to.png'); }
+.il-alt { background-image: url('../images/il-alt.png'); }
 
 .photo-vishal-rai-big { background-image: url('../images/photo-vishal-rai-big.jpg'); }
 .photo-developer-1 { background-image: url('../images/photo-developer-1.png'); }
