--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -50,6 +50,7 @@
 .bg-user-stories-team-size { background-image: url('../images/header-sub-user-stories-team-size.svg'); }
 .bg-user-stories-industry { background-image: url('../images/header-sub-user-stories-industry.png'); }
 .bg-user-stories-solution-approach { background-image: url('../images/header-sub-user-stories-solution-approach.svg'); }
+.bg-solutions-solution-approach { background-image: url('../images/header-sub-solutions-solution-approach.png'); }
 
 .bg-resources-product { background-image: url('../images/header-sub-resources-product.svg'); }
 .bg-resources-download { background-image: url('../images/header-sub-resources-download.svg'); }
