--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -797,7 +797,7 @@ button:focus {
   .header-image {
     width: 580px;
     height: 350px;
-    background-size: 100% 100%;
+    background-size: auto 100%;
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
