--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -51,6 +51,10 @@
   background-size: auto 100%;
 }
 
+.cb {
+  clear:both;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -85,7 +89,7 @@ h4 {
 }
 
 nav {
-  padding: 17px 0 12px 0;
+  padding: 0 0 12px 0;
   font-size: 14px;
   position: fixed;
   background-color: @white;
@@ -94,6 +98,7 @@ nav {
   .transition;
 
   .nav-wrap-items {
+    width: 150px;
 
     .nav-item-main {
       font-weight: bold;
@@ -109,10 +114,11 @@ nav {
   .nav-item-logo,
   .nav-item-sign {
     display: inline-block;
+    padding-top: 16px;
   }
 
   .nav-item-logo {
-    width: 270px;
+    width: 200px;
     margin-top: 3px;
     margin-left: 24px;
     margin-bottom: -3px;
@@ -126,19 +132,27 @@ nav {
 
   .nav-wrap-items {
     display: inline-block;
-    width: 570px;
+    width: 680px;
     left: 50%;
-    margin-left: -285px;
+    margin-left: -340px;
     position: absolute;
 
     .active {
-      padding-bottom: 14px;
-      border-bottom: 5px solid @orange800;
+      color: @white;
+      margin-top: 0;
+      padding: 18px 12px 16px 12px;
+      background-color: @gray800;
+    }
+
+    .active-menu {
+      padding-top: 15px !important;
+      border-top: 5px solid @orange800;
     }
 
     .nav-item-main {
-      width: 130px;
-      margin-top: 4px;
+      width: 150px;
+      padding-top: 20px;
+      padding-left: 14px;
       margin-right: 16px;
       float: left;
     }
@@ -149,23 +163,26 @@ nav {
   }
 }
 
+.nav-grid-wide {
+  .nav-wrap-items {
+    width: 900px;
+  }
+}
+
 .nav-sub {
   display:none;
   position: fixed;
   top: 57px;
   background-color: @gray800;
-  height: 194px;
-  padding-top: 14px;
   z-index: 998;
   .box-shadow;
 
   .nav-menu-link {
-    color: @gray500;
+    color: @gray600;
     display: block;
-    margin-bottom: 7px;
-    padding-bottom: 6px;
     border-bottom: 1px solid rgba(255,255,255,0.08);
-    font-size: 0.8em;
+    font-size: 0.9em;
+    .sofia;
     .transition;
   }
 
@@ -177,6 +194,78 @@ nav {
 
   .nav-menu-link:hover {
     color: @orange800;
+  }
+
+  .nav-item-main {
+    min-height: 170px;
+
+    .nav-item-sub-list {
+      margin: 0.6em 0 0 0;
+      padding: 0;
+      list-style: none;
+      li {
+        color: @gray400;
+        padding-bottom: 0.8em;
+        font-size: 0.8em;
+        line-height: 1.5;
+      }
+    }
+  }
+}
+
+.nav-sub-product {
+  .nav-item-main {
+    width: 220px !important;
+  }
+
+  .nav-wrap-items {
+    position: relative;
+    left: 50%;
+    margin-left: -565px;
+  }
+}
+
+.nav-sub-solutions {
+  .nav-wrap-items {
+    width: 450px;
+  }
+
+  .nav-item-main {
+    width: 200px !important;
+  }
+
+  .nav-wrap-items {
+    position: relative;
+    left: 50%;
+    margin-left: -398px;
+  }
+}
+
+.nav-sub-resources {
+  .nav-item-main {
+    width: 170px !important;
+  }
+
+  .nav-wrap-items {
+    position: relative;
+    left: 50%;
+    margin-left: -232px;
+  }
+}
+
+.nav-sub-company {
+  .nav-wrap-items {
+    width: 400px;
+  }
+
+  .nav-item-main {
+    width: 170px !important;
+  }
+
+  .nav-wrap-items {
+    position: relative;
+    left: 50%;
+    margin-left: -67px;
   }
 }
 
@@ -1259,7 +1348,7 @@ button:focus {
   .arrow-right {
     width: 48px;
     height: 48px;
-    top: 23em;
+    top: 19.5em;
     right: 0.5em;
     position: absolute;
     background-image: url('../images/arrow-light-right.svg');
