--- a/embold.com/css/embold.less
+++ b/embold.com/css/embold.less
@@ -401,6 +401,10 @@ button:focus {
   clear: both;
 }
 
+.block-bottom-area {
+  padding-top: 3em;
+}
+
 .block-footer {
   color: @gray600;
   font-size: 13px;
