--- a/embold.com/css/icons.less
+++ b/embold.com/css/icons.less
@@ -63,8 +63,6 @@
 
 .bg-resources-product { background-image: url('../images/header-sub-resources-product.svg'); }
 
-
-
 .il-index-features { background-image: url('../images/il-index-features.png'); }
 .il-index-locations { background-image: url('../images/il-index-locations.png'); }
 .il-product-overview-ruleless-static { background-image: url('../images/il-product-overview-ruleless-static.png'); }
@@ -85,3 +83,5 @@
 .photo-office-pune { background-image: url('../images/photo-office-pune.jpg'); }
 .photo-office-frankfurt { background-image: url('../images/photo-office-frankfurt.jpg'); }
 .photo-office-tokyo { background-image: url('../images/photo-office-tokyo.jpg'); }
+.photo-press-logo-bloomberg { background-image: url('../images/photo-logo-bloomberg.jpg'); }
+.photo-press-logo-theguardian { background-image: url('../images/photo-logo-theguardian.png'); }
